--- a/less2sass/test.css
+++ b/less2sass/test.css
@@ -58,4 +58,4 @@
   -webkit-animation-name: bounce
   animation-name: bounce
   -webkit-transform-origin: center bottom
-  transform-origin: center bottom
+  transform-origin: center bottom;
